--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-size-matters": "^0.4.0",
     "react-native-webview": "11.26.0"
   },
   "devDependencies": {
